feat: versao concorrente com virtual threads